Slider image stretch fixes

--- a/src/themes/opera-2022/src/patterns/components/slider/slider.scss
+++ b/src/themes/opera-2022/src/patterns/components/slider/slider.scss
@@ -13,6 +13,7 @@
 			border-radius: 0;
 			img {
 				height: 720px;
+				object-fit: cover;
 			}
 			.views-field-nothing{
 				background: rgba(0, 0, 0, 0.4);
